[package]
name = "survive-the-course-rs"
version = "0.1.0"
authors = ["Yukio Usuzumi <anohigisavay@gmail.com>"]
edition = "2021"

[dependencies]
test-util = { path = "test-util" }
test-macro = { path = "test-macro" }
automod = '*'
serde_json = "1.0"

[workspace]
members = ["playground", "test-util", "test-macro"]
